Adjusted desktop scaling to allow vertical scroll. Fixed modal scaling issues on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden;
+    overflow-x: hidden;
 
     h1 {
         font-size: 1.17em;
@@ -42,7 +42,7 @@ html, body {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     gap: 10px;
 }
@@ -54,7 +54,6 @@ html, body {
     align-items: center;
     max-height: 50px;
     margin-top: 15px;
-    margin-bottom: 5px;
     margin-left: 10px;
     margin-right: 10px;
     padding: 10px;
@@ -74,7 +73,7 @@ html, body {
 #bottom {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
     width: auto;
     margin-left: 10px;
     margin-right: 10px;
@@ -180,8 +179,8 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 220px;
-    height: 100%;
+    min-width: 220px;
+    height: auto;
     padding: 10px;
     gap: 5px;
     background-color: rgba(0,0,0,0.4);
@@ -192,7 +191,6 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 220px;
 }
 
 #classInfo {
@@ -210,7 +208,7 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+    height: auto;
     padding: 10px;
     background-color: rgba(0,0,0,0.4);
     border-radius: 15px;
@@ -984,7 +982,7 @@ html, body {
 
 .tour-start {
     position: fixed;
-    bottom: 10px;
+    bottom: 15px;
     right: 10px;
     max-width: 60px;
     z-index: 98;
@@ -1283,12 +1281,12 @@ html, body {
     }
 
     .modal-icon {
-        height: 150px;
-        width: 150px;
+        min-height: 150px;
+        min-width: 150px;
     }
 
     .modal-icon-gem {
-        height: 100px;
+        min-height: 100px;
     }
 
     .modal-icon-accessory {
@@ -1400,7 +1398,7 @@ html, body {
 
     .classMenuContent {
         height: 75%;
-        width: 750px;
+        width: 90%;
     }
 
     .calc-button {
@@ -1423,7 +1421,7 @@ html, body {
     }
 
     #normalArts {
-        width: calc(50% + 50px);
+        min-width: calc(50% + 50px);
         margin: 0;
     }
 
@@ -1432,7 +1430,7 @@ html, body {
     }
 
     #masterArts {
-        width: calc(50% + 50px);
+        min-width: calc(50% + 50px);
         margin-left: auto;
     }
 
